[package]
name = "dmove"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
crossbeam-channel = "0.5"
csv = "1.1"
tqdm = "0.7"
hashbrown = { version = "0.14.3", features = ["serde"] }
bincode = "1.3"
