[package]
name = "dmove"
version.workspace = true
edition.workspace = true

[dependencies]
flate2 = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
tqdm = "0.7"
hashbrown = { version = "0.14.3", features = ["serde"] }
bincode = "1.3"
