[package]
name = "rankless-rs"
version.workspace = true
edition.workspace = true

[dependencies]
dmove-macro = {path = "../dmove_macro"}
dmove = {path = "../dmove"}
flate2 = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
csv = "1.1"
tqdm = "0.7"
hashbrown = { version = "0.14.3", features = ["serde"] }
bincode = "1.3"
