[package]
name = "rankless-server"
version.workspace = true
edition.workspace = true

[dependencies]
dmove = {path = "../dmove"}
rankless-rs = {path = "../rankless_rs"}
simsearch = "0.2"
deunicode = "1.6.0"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
hashbrown = { version = "0.14.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
warp = { version="0.3", features = ["compression-gzip", "tls"] }
