[package]
name = "rankless-server"
version.workspace = true
edition.workspace = true

[dependencies]
dmove = {path = "../dmove"}
rankless-rs = {path = "../rankless_rs"}
rankless-trees = {path = "../rankless_trees"}
muwo-search = {path = "../muwo_search"}
flate2 = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
hashbrown = { version = "0.14.3", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
tower = { version = "0.5" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http2"] }
axum-server = { version = "0.7" }
rand = "0.8.5"
kd-tree = "0.6.0"
typenum = "1.17.0"
