[package]
name = "rankless-trees"
version.workspace = true
edition.workspace = true

[dependencies]
dmove-macro = {path = "../dmove_macro"}
dmove = {path = "../dmove"}
muwo-search = {path = "../muwo_search"}
rankless-rs = {path = "../rankless_rs"}
flate2 = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# serde_path_to_error = "0.1"
hashbrown = { version = "0.14.3", features = ["serde"] }
bincode = "1.3"
